--- a/app/src/main/res/layout/activity_compute.xml
+++ b/app/src/main/res/layout/activity_compute.xml
@@ -21,7 +21,7 @@
 
         <LinearLayout
 
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:orientation="vertical">
@@ -33,7 +33,6 @@
                 android:orientation="horizontal">
 
                 <Button
-                    android:layout_marginRight="50dp"
                     android:id="@+id/buttonAdd"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
