--- a/app/src/main/res/layout/activity_compute.xml
+++ b/app/src/main/res/layout/activity_compute.xml
@@ -76,7 +76,7 @@
                     android:text="1" />
 
                 <Button
-                    android:id="@+id/previous_button"
+                    android:id="@+id/result_previous_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
