--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -25,5 +25,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/last_result_label" />
+
+        <Button
+            android:id="@+id/result_previous_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/previous" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
