--- a/app/src/main/res/menu/submit_menu.xml
+++ b/app/src/main/res/menu/submit_menu.xml
@@ -2,7 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item android:title="@string/submit"
+    <item
+        android:id="@+id/submit_menu_button"
+        android:title="@string/submit"
         app:showAsAction="always" />
 
     <item android:title="@string/reset" />
