--- a/app/src/main/res/layout/activity_compute.xml
+++ b/app/src/main/res/layout/activity_compute.xml
@@ -13,11 +13,11 @@
 
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/operation_text_view"
+            android:text=""
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="TextView" />
+            android:layout_weight="1" />
 
         <LinearLayout
 
@@ -76,7 +76,7 @@
                     android:text="1" />
 
                 <Button
-                    android:id="@+id/result_previous_button"
+                    android:id="@+id/button2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
